--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,10 +10,10 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="3"
-        height="2"
+        width="2"
+        height="1.5"
         depth="1"
-        color="#BBAA33" 
+        color="#dad1ed" 
         shadow>
       </a-box>
     </a-scene>
