--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -17,6 +17,22 @@
         color="#dad1ed" 
         shadow>
       </a-box>
+      <a-plane>
+        position="1 0.75 -3"
+        width="3"
+        height="1"
+        depth="1"
+        color="#eb4034" 
+        shadow>
+      </a-plane>
+      <a-ring>
+        position="0 0 -4"
+        width="3"
+        height="1"
+        depth="2"
+        color="#34ebd0" 
+        shadow>
+      </a-ring>
     </a-scene>
   </body>
 </html>
