--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -17,7 +17,7 @@
         color="#dad1ed" 
         shadow>
       </a-box>
-      <a-plane>
+      <a-plane
         position="1 0.75 -3"
         width="3"
         height="1"
@@ -25,7 +25,7 @@
         color="#eb4034" 
         shadow>
       </a-plane>
-      <a-ring>
+      <a-ring
         position="0 0 -4"
         width="3"
         height="1"
