--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -17,14 +17,14 @@
         color="#dad1ed" 
         shadow>
       </a-box>
-      <a-plane
+      <a-octahedron
         position="1 0.75 -3"
         width="3"
         height="1"
         depth="1"
         color="#eb4034" 
         shadow>
-      </a-plane>
+      </a-octahedron>
       <a-ring
         position="3 1 -4"
         width="3"
