--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -36,7 +36,8 @@
         depth="1" 
         material="src: #wood2"
         shadow
-             animation="property: position; to: 90 90 360 180; dur: 2000; easing: linear; loop: true">  
+             animation="property: rotation"
+          animation__2="property: position"">  
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
