--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -37,7 +37,7 @@
         material="src: #wood2"
         shadow
              animation="property: rotation"
-          animation__2="property: position"">  
+          animation="property: position"">  
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
