--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -23,7 +23,7 @@
         material="src: #wood"
         shadow 
         animation="property: rotation; 
-                   to: 90 90 -360 180; 
+                   to: 90 90 -360 130; 
                    dur: 2000; 
                    easing: linear; 
                    loop: true" >
@@ -37,7 +37,7 @@
         material="src: #wood2"
         shadow
              animation="property: rotation"
-          animation="property: position"">  
+          animation="property: position">  
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
