--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -11,6 +11,7 @@
     <a-scene background="color: #333333">
       <a-box id="myBox"
         position="0 2 -5"
+        rotation="1 1 3"
         width="2"
         height="1"
         depth="1"
@@ -19,6 +20,7 @@
       </a-box>
       <a-octahedron
         position="5 0.75 -3"
+        rotation="2 1 1"
         width="3"
         height="1"
         depth="1"
@@ -26,7 +28,8 @@
         shadow>
       </a-octahedron>
       <a-ring
-        position="2 6 -4"
+        position="2 1.5 -4"
+        rotation="1.5 2 1"
         width="3"
         height="1"
         depth="2"
